--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -242,23 +242,23 @@ h6 {
   color: var(--heading-color);
 }
 
-.container ul li, ol li {
+.section#text ul li, ol li {
 	padding: 5px;
 	text-align: justify;
 }
 
-.container ul {
+.section#text ul {
   list-style: none;
   margin-left: 0;
   padding-left: 0;
 }
 
-.container ul li {
+.section#text ul li {
   padding-left: 1em;
   text-indent: -10px;
 }
 
-.container ul li:before {
+.section#text ul li:before {
   content: "-";
   padding-right: 5px;
 }
